# dopp

./: .coverage  .dockerignore  .env.txt  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.hf  Dockerfile.test  PROJECT_OVERVIEW.md  Privacy Policy for Doppleganger Social Network.txt  README.md  TECHNICAL.md  Terms and Conditions for Doppleganger Social Network.txt  add_updated_at.py  app.py  apply_database_approach.ps1  b2_rename_reupload_delete.py  build.sh  check_db.py  check_posts_schema.py  check_profile_data.py  check_schema.py  check_user_auth.py  cleanup_posts.py  config.py  create_face_likes_table.py  create_tables.py  debug_like.py  delete_filenames_from_faces_db.py  delete_specific_post.py  delete_test_posts.py  delete_tx_il_faces.py  deleted_faces_log.txt  direct_server.py  direct_test.html  docker-compose.yml  estimated_deleted_filenames_TX_IL.csv  extensions.py  fix_face_filenames_and_db.py  (+41 more)
cli/: dev.py
config/: __init__.py  app_config.py  cache.py  development.py  face_config.py  production.py
forms/: __init__.py  admin_forms.py  auth_forms.py  profile_forms.py
frontend/: package-lock.json  package.json  plasmic.json  vercel.json  vite.config.js
middleware/: __init__.py  cors_middleware.py  security.py
migrations/: 002_add_city_state_to_users.py  003_add_face_encoding.py  004_add_feed_tables.py  005_create_faces_table.py  add_indexes.sql  add_is_match_post_column.py  add_updated_at_column.py  add_updated_at_to_posts.sql  create_likes_table.py  fix_comments_table.py  fix_posts_table.py  recreate_comments_table.py  (+2 more)
(+457 files in other folders)
